--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Final project for ECS 162.",
   "main": "server.js",
   "scripts": {
-    "build": "make",
-    "make": "make",
-    "start": "node server.js"
+    "start": "node server.js",
+    // "build": "npm install request ; npm install express; npm install http; npm install sqlite3; node dbCreate.js"
   },
   "repository": {
     "type": "git",
